# DataProducts

./: bezrobocie_wykres.R  czytelnicy.Rda  czytelnicy_wykres.R  gimnazjalne_save.R  ludnosc_na_1_wykres.R  sprawdziany_save.R
MIMUW_2016/: readme.md
MIMUW_2016/KolejkiNFZ/: readme.md
MIMUW_2016/USOS/: readme.md
MIMUW_2016/WynikiEgzaminacyjne/: readme.md  wczytaj.Rmd  wczytaj.html
MIMUW_2016/materialy/dplyr/: dplyr.Rmd  dplyr.html
MIMUW_2016/zespoly/: readme.md
MIMUW_2016/zespoly/AgresywneTeletubisie/: Instrukcja instalacji.Rmd  Instrukcja obsługi.Rmd  Instrukcja_instalacji.html  Instrukcja_obsługi.html  dane_do_geo.RData  dane_powiatowe_2015.csv  depracated.R  global.R  id_szkoly_geo.RData  obrobka danych.R  readme.md  server.R  ui.R  wyniki_analiz.html
MIMUW_2016/zespoly/DobraDruzyna/: DobraDruzynaZarys.html  przygotowanie_danych_gus.R  readme.md  shiny_1_iter.RData
MIMUW_2016/zespoly/DobraDruzyna/shiny/: server.R  (+1 more)
MIMUW_2016/zespoly/PogromcyMatur/: faza1.md  readme.md
MIMUW_2016/zespoly/UsosPredators/: README.md  faza1.md
MIMUW_2016/zespoly/marakuja/: faza1.md  readme.md
MIMUW_2016/zespoly/mimkatz/: faza1.md  raport.Rmd  raport.html  readme.md
MIMUW_2016/zespoly/mimkatz/aplikacja/C++/jnpcleaner/: CMakeLists.txt
MIMUW_2016/zespoly/mimkatz/aplikacja/C++/jnpcleaner/src/: GradeCleaner.cc  GradeCleaner.hh  JnpCleaner.cc  JnpCleaner.hh  Makefile  QuestionnaireCleaner.cc  QuestionnaireCleaner.hh  main.cpp
MIMUW_2016/zespoly/teamRocket/: faza1.md  instrukcja.Rmd  instrukcja.html  readme.md
MIMUW_2016/zespoly/test/: readme.md
arepo/: backpack.db
(+185 files in other folders)
